fixed pdp description alignment and back btn

--- a/www/css/custom.css
+++ b/www/css/custom.css
@@ -546,3 +546,11 @@ hr{
     width: 70px;
 
 }
+
+.text-justify{
+    text-align: justify!important;
+}
+
+.border-0{
+    border: none!important;
+}
